# mira-terminal

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  README.md  package.json
apps/studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/src/: main.rs
apps/studio/src-tauri/src/commands/: build.rs  git.rs  mod.rs  project.rs  public_json.rs  safe_write.rs  support.rs
apps/web/: CNAME  (+5 more)
docs/: admin-phase-f.md  public-data-update.md  public-schema.md  specification.md  v0.9-preview.md  v04-architecture-migration.md  v1.0-release.md
scripts/: build-public.mjs  check-syntax.mjs
tests/: active-filter-view.test.mjs  admin-dashboard.test.mjs  admin-phase-f.test.mjs  admin-production-os.test.mjs  admin-tag-picker-view.test.mjs  backup-meta.test.mjs  brand-content-refresh.test.mjs  brand-info-refresh.test.mjs  brand-shell.test.mjs  creators.test.mjs  filter-url-state.test.mjs  game-public-view.test.mjs  game-store.test.mjs  home-admin-editor.test.mjs  home-config.test.mjs  home-public-export.test.mjs  home-public-integration.test.mjs  house-rules.test.mjs  integration-contracts.test.mjs  public-ogp.test.mjs  public-scenario-filter.test.mjs  scenario-editor-mount.test.mjs  scenario-filter.test.mjs  scenario-public-export.test.mjs  scenario-public-issues.test.mjs  scenario-rating.test.mjs  scenario-storage.test.mjs  studio-dashboard.test.mjs  studio-foundation.test.mjs  studio-phase0.test.mjs  studio-vertical-slice.test.mjs  tag-filter-view.test.mjs  terminal-foundation.test.mjs  toast-service.test.mjs  (+4 more)
(+369 files in other folders)
